# wasm-faas

./: .gitignore  Cargo.toml  docker-compose.yaml  readme.md  wasi_snapshot_preview1.reactor.wasm
curl/: bucket_create.http  bucket_list.http  file_delete.http  file_download.http  file_upload.http  wasm_exec.http
fibonacci-faas/: Cargo.toml  faas.rs
hello-faas/: Cargo.toml  hello.rs
s3-faas/: Cargo.toml  faas.rs
server/: Cargo.toml
server/src/: error.rs  main.rs
server/src/api/: bucket_api.rs  exec_api.rs  file_api.rs  mod.rs
server/src/test/: test_cases.rs
server/src/tools/: s3.rs
wit/: faas.wit
