resolver = "2"

[workspace]
members = [
    "server",
    "fibonacci-faas",
]
exclude = [
    "demo-main"
]

[workspace.dependencies]

axum = { version = "0.8.8", features = ["macros", "multipart"] }
tokio = { version = "1.49.0", features = ["full"] }
aws-config = { version = "1.8.12" }
aws-sdk-s3 = { version = "1.119.0" }
thiserror = { version = "2.0.17" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio-util = { version = "0.7.18", features = ["io"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
wit-bindgen = "0.50.0"

wasmtime = { version = "40.0.0", features = ["component-model", "async"] }
wasmtime-wasi = "40.0.0"