[package]
name = "s3-faas"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib"]
path = "faas.rs"
name = "faas_exec"

[dependencies]
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-sdk-s3 = { workspace = true }
aws-smithy-async = { version = "1.2.7", features = ["rt-tokio"] }
aws-smithy-runtime = { version = "1.9.5", default-features = false, features = ["client"] }
aws-smithy-types = { version = "1.3.5", default-features = false }
aws-smithy-wasm = { version = "0.1.6" }
tokio = { version = "1.49.0", default-features = false, features = ["sync", "macros", "io-util", "rt", "time"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
wit-bindgen = { workspace = true }