[package]
name = "server"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = { workspace = true, features = ["macros", "multipart"] }
tokio = { workspace = true, features = ["full"] }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio-util = { workspace = true, features = ["io"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
wasmtime = { version = "40.0.0", features = ["component-model", "async"] }
wasmtime-wasi = "40.0.0"