[package]
name = "server"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = { workspace = true, features = ["macros", "multipart"] }
tokio = { workspace = true, features = ["full"] }
aws-config = { workspace = true, features = ["default"] }
aws-sdk-s3 = { workspace = true, features = ["default"] }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio-util = { workspace = true, features = ["io"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
wasmtime = { workspace = true, features = ["component-model", "async"] }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }
futures-util = { workspace = true }